descriptor/pod-with-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-curl
spec:
  containers:
  - name: main
    image: tutum/curl
    command: ["sleep", "99999999"]
