descriptor/pod-with-volume-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-with-volume-config
spec:
  containers:
  - image: hellozin/demo
    name: demo
    volumeMounts:
    - name: properties
      mountPath: /etc/hello-info
      subPath: simple-config.yaml
    ports:
    - containerPort: 8080
      protocol: TCP
  volumes:
  - name: properties
    configMap:
      name: hello-file-config
      items:
      - key: simple-config.yaml
        path: simple-config.yaml
