descriptor/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - host: hellozin.me
      http:
        paths:
        - path: /
          backend:
            serviceName: demo-service
            servicePort: 80
